# arbitrage-engine

./: .gitignore  Makefile  README.md  docker-compose.yml  polymarket_orderbook_compare.py
aggregation_service/: .env.example  Dockerfile  arbitrage_task.py  main.py  polling_new_pairs.py  pyproject.toml  run_arbitrage_worker.py
aggregation_service/api/: arbitrage.py  deps.py  markets.py
aggregation_service/core/: __init__.py  config.py
aggregation_service/core/exc/: async_exc_handler.py  fastapi_exc_handler.py
aggregation_service/core/middleware/: rate_limit.py
aggregation_service/core/models/: database.py  invalid_pairs.py  pair_a_index.py
aggregation_service/core/observe/: sentry.py
aggregation_service/core/redis/: redis_cli.py
aggregation_service/core/repositories/: base_repository.py  invalid_pairs_repository.py  kalshi_repository.py  market_repository.py  orderbook_repository.py  pair_index_repository.py  pair_repository.py  polymarket_repository.py  predictfun_repository.py  queries.py
aggregation_service/core/schemas/: arbitrage.py  markets.py  orderbooks.py
aggregation_service/core/similarity/: both.py  cross_encoder.py  gates.py  ner_client.py  nli_client.py
aggregation_service/core/utils/: __init__.py  url_generator.py
aggregation_service/services/: arbitrage.py
aggregation_service/services/market_service/: kalshi_service.py  polymarket_service.py  predictfun_service.py  service.py  service_storage.py
aggregation_service/services/pair_generation_service/: service.py
aggregation_service/services/similarity_service/: compute_scores.py  config.py  service.py  similarity.py  utils.py
aggregation_service/tests/: conftest.py  test.py  test_api_arbitrage.py  test_api_markets.py  test_arbitrage.py  test_compute_scores.py  test_market_service.py  test_numeric.py  test_pair_polling.py  test_pipeline.py  test_similarity.py  test_stages.py  test_temporal.py  test_url_generator.py  test_weighted_sum_cosine.py
common/: pyproject.toml
common/common/models/: base.py  market_pairs.py  markets.py  orderbooks.py
common/common/repositories/: base_repository.py
update_orderbooks_service/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
update_orderbooks_service/core/: __init__.py  config.py  fetcher.py  kalshi_utils.py
update_orderbooks_service/core/models/: base.py  database.py  market_pairs.py  markets.py  orderbooks.py
update_orderbooks_service/core/orderbook_formatters/: kalshi_formatter.py  predictfun_formatter.py
update_orderbooks_service/core/repositories/: base_repository.py  kalshi_repository.py  market_repository.py  orderbook_repository.py  poly_repository.py  predictfun_repository.py
update_orderbooks_service/orderbook_service/: main.py
update_orderbooks_service/orderbook_service/kalshi/: api.py  ws_service.py  ws_worker.py
update_orderbooks_service/orderbook_service/polymarket/: ws.py
update_orderbooks_service/orderbook_service/predictfun/: api.py  ws_service.py  ws_worker.py
update_orderbooks_service/tasks/: __init__.py  orderbooks.py
update_orderbooks_service/tests/: conftest.py  test_kalshi_formatter.py  test_kalshi_utils.py  test_kalshi_ws_service.py  test_orderbook_repository.py  test_polymarket_repository.py  test_polymarket_ws.py  test_predictfun_formatter.py  test_predictfun_ws_worker.py  test_update_orderbooks_task.py
user_service/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
user_service/alembic/: env.py
user_service/api/: deps.py
user_service/core/: config.py  database.py  security.py
user_service/dto/: subscription_dto.py  transaction_dto.py  user_dto.py  user_subscription_dto.py
user_service/exceptions/: base.py  order.py  payment.py  subscription.py  transaction.py  user.py  user_subscription.py
user_service/models/: __init__.py  base.py  crypto_payment.py  mixin.py  order.py  order_product_association.py  subscription.py  user.py  user_subscriptions.py  user_transaction.py
user_service/repositrories/: base_repository.py  crypto_payment_repository.py  order_product_assoc_repository.py  order_repository.py  subsctiption_repository.py  user_repository.py  user_subscription_repository.py  user_transaction_repository.py
user_service/schemas/: auth.py  order.py  payment.py  subscription.py  transaction.py  user.py  user_subscription.py
user_service/services/: admin_user_subscription_service.py  admin_user_transaction_service.py  crypto_payment_service.py  email_service.py  order_service.py  user_subscription_service.py  user_transaction_service.py
user_service/tests/: conftest.py  factories.py
(+156 files in other folders)
