[project]
name = "aggregation-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "sentry-sdk (>=2.48.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "orjson (>=3.11.7,<4.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:Remove `format_exc_info`:UserWarning",
    "ignore:Parsing dates involving a day of month:DeprecationWarning",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
pytest-asyncio = ">=1.0"
ruff = ">=0.4.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402", "E741", "UP042", "UP046"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"alembic/**" = ["F401"]
"tests/**" = ["F841"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
