[project]
name = "common"
version = "0.1.0"
description = "Shared models and repositories for pipeline services"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pgvector",
    "numpy",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"