[project]
name = "update-orderbooks-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "aiohttp-socks (>=0.11.0,<0.12.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "sentry-sdk[asyncio] (>=2.0.0,<3.0.0)"
]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
ruff = ">=0.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "../common"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402", "E741", "UP042", "UP046"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"alembic/**" = ["F401"]
"tests/**" = ["F841"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
