[project]
name = "user-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.110.0,<1.0.0)",
    "uvicorn[standard] (>=0.29.0,<1.0.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "fastapi-limiter ==0.1.6",
    "sentry-sdk[fastapi] (>=2.0.0,<3.0.0)",
    "structlog (>=24.0.0,<26.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "aiosmtplib (>=3.0.0,<4.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)"
]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
httpx = ">=0.27"
fakeredis = ">=2.0"
aiosqlite = ">=0.20"
ruff = ">=0.4.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"